--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>             
+        <meta charset="utf-8"/>
+
+<title>Ben Cowper Film</title>
+</head>
+
 <body>
 	<h1>Ben Cowper's Portfolio</h1>
 	<p>testing paragraph here</p>
