--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 
 <head>
 <title>Ben Cowper Film</title>
-</head>
 
 <style>
 body {
@@ -39,7 +38,11 @@ li a:hover:not(.active) {
     color: white;
 }
 </style>
+
 </head>
+
+</body>
+
 <body>
 
 <ul>
@@ -64,4 +67,5 @@ li a:hover:not(.active) {
 </div>
 
 </body>
+
 </html>
