--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 25%;
-    background-color: #ff;
+    width: 10%;
+    background-color: #80;
     position: fixed;
     height: 100%;
     overflow: auto;
