--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 10%;
+    width: 20%;
     background-color: #80;
     position: fixed;
     height: 100%;
@@ -29,7 +29,7 @@ li a {
 }
 
 li a.active {
-    background-color: #4CAF50;
+    background-color: #44C5CE;
     color: white;
 }
 
@@ -46,10 +46,13 @@ li a:hover:not(.active) {
 <body>
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a class="active" href="#film">film</a></li>
+  <li><a href="#me">me</a></li>
+  <li><a href="#demoreel">demo reel</a></li>
+  <li><a href="#resume">resume</a></li>
+  <li><a href="#commercial">commercial</a></li>
+  <li><a href="#https://linkedin.com/in/bencowper">linkedin</a></li>
+  <li><a href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
 
 <div style="margin-left:25%;padding:1px 16px;height:1000px;">
