--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Ben Cowper Film</title>
 
 <style>
+
 body {
     margin: 0;
 }
@@ -37,11 +38,10 @@ li a:hover:not(.active) {
     background-color: #555;
     color: white;
 }
+
 </style>
 
 </head>
-
-</body>
 
 <body>
 
@@ -55,18 +55,11 @@ li a:hover:not(.active) {
   <li><a href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
 
-<div style="margin-left:25%;padding:1px 16px;height:1000px;">
-  <h2>Fixed Full-height Side Nav</h2>
-  <h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
-  <p>Notice that this div element has a left margin of 25%. This is because the side navigation is set to 25% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
-  <p>Also notice that we have set overflow:auto to sidenav. This will add a scrollbar when the sidenav is too long (for example if it has over 50 links inside of it).</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
+<div style="margin-left:20%;padding:1px 16px;height:1000px;">
+
+<h1>Ben Cowper film</h1>
+<p>content content content</p>
+
 </div>
 
 </body>
