--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ li a {
 }
 
 li a.active {
-    background-color: #44C5CE;
+    background-color: #5824fa;
     color: white;
 }
 
 li a:hover:not(.active) {
-    background-color: #555;
+    background-color: #245bfa;
     color: white;
 }
 
@@ -51,7 +51,7 @@ li a:hover:not(.active) {
   <li><a href="#demoreel">demo reel</a></li>
   <li><a href="#resume">resume</a></li>
   <li><a href="#commercial">commercial</a></li>
-  <li><a href="#https://linkedin.com/in/bencowper">linkedin</a></li>
+  <li><a href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
 
