--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ li a {
 }
 
 li a.active {
-    background-color: #5824fa;
-    color: white;
+    background-color: #5078AF;
+    color: black;
 }
 
 li a:hover:not(.active) {
-    background-color: #245bfa;
+    background-color: #5850AF;
     color: white;
 }
 
