--- a/me.html
+++ b/me.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>Ben Cowper Film</title>
+<title>Ben Cowper Film | me</title>
 
 <style>
 
@@ -46,8 +46,8 @@ li a:hover:not(.active) {
 <body>
 
 <ul>
-  <li><a class="active" href="#film">film</a></li>
-  <li><a href="me.html">me</a></li>
+  <li><a href="#film">film</a></li>
+  <li><a class="active" href="me.html">me</a></li>
   <li><a href="#demoreel">demo reel</a></li>
   <li><a href="#resume">resume</a></li>
   <li><a href="#commercial">commercial</a></li>
