--- a/me.html
+++ b/me.html
@@ -30,12 +30,12 @@ li a {
 }
 
 li a.active {
-    background-color: #5078AF;
+    background-color: #50A8AF;
     color: black;
 }
 
 li a:hover:not(.active) {
-    background-color: #5850AF;
+    background-color: #af5750;
     color: white;
 }
 
