--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ li a:hover:not(.active) {
 <body>
 
 <ul>
-  <li><a class="active" href="#film">film</a></li>
+  <li><a class="active" href="index.html">film</a></li>
   <li><a href="me.html">me</a></li>
   <li><a href="#demoreel">demo reel</a></li>
   <li><a href="#resume">resume</a></li>
