--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <html>
 
 <head>
-<title>Ben Cowper Film</title>
+<title>Ben Cowper | film</title>
 
 <style>
 
 body {
     margin: 0;
 }
+
+style="font-family:verdana"
 
 ul {
     list-style-type: none;
