--- a/index.html
+++ b/index.html
@@ -3,45 +3,14 @@
 <html>
 
 <head>
+
 <title>Ben Cowper | film</title>
 
-<style>
-
-body {
-    margin: 0;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 20%;
-    background-color: #80;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
-}
-
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-}
-
-li a.active {
-    background-color: #50A8AF;
-    color: white;
-}
-
-li a:hover:not(.active) {
-    background-color: #af5750;
-    color: white;
-}
-
-</style>
+<link rel="stylesheet" href="styles.css">
 
 </head>
+
+
 
 <body>
 
@@ -57,7 +26,8 @@ li a:hover:not(.active) {
 
 <div style="margin-left:20%;padding:1px 16px;height:1000px;">
 
-<h1>Ben Cowper film</h1>
+<h1>film</h1>
+
 <p>content content content</p>
 
 </div>
