--- a/me.html
+++ b/me.html
@@ -20,8 +20,8 @@
   <li><a href="#demoreel">demo reel</a></li>
   <li><a href="#resume">resume</a></li>
   <li><a href="#commercial">commercial</a></li>
-  <li><a href="https://linkedin.com/in/bencowper">linkedin</a></li>
-  <li><a href="https://vimeo.com/bencowper">vimeo</a></li>
+  <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
+  <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
 
 <div style="margin-left:20%;padding:1px 16px;height:1000px;">
