--- a/me.html
+++ b/me.html
@@ -26,9 +26,25 @@
 
 <div style="margin-left:20%;padding:1px 16px;height:1000px;">
 
-<h1>me</h1>
+<center>
+<h2>
+Ben Cowper
+(860) - 221 - 4650
+cowpervideos@gmail.com
+</h2>
 
-<p>content content content</p>
+<p>I have been making short films for over ten years specializing in Editing and Cinematography. The following is a summary of my skill set:</p>
+</center>
+
+<p>
+  <b>Cinematographer</b> Canon 5DmkIII (Magic Lantern), Canon C100, Canon 60D, Blackmagic, GoPro, Sony, JVC, Panasonic, Nikon, 16mm Bolex, Super 8, Glidecam, digital/analog still photography (35, medium, large format)
+</p>
+
+<p>
+  <b>Editor/Colorist</b> Adobe Premiere, After Effects, Photoshop, Speedgrade, Final Cut Pro, Avid, DaVinci Resolve
+</p>
+
+
 
 </div>
 
