--- a/me.html
+++ b/me.html
@@ -46,6 +46,14 @@ cowpervideos@gmail.com
   <b>Editor/Colorist</b> Adobe Premiere, After Effects, Photoshop, Speedgrade, Final Cut Pro, Avid, DaVinci Resolve
 </p>
 
+<p>
+  <b>Lighting Designer</b> Arri, Lowel, Kino, ETC
+</p>
+
+<p>
+  <b>Sound Recordist/Mixing</b> Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 &amp; (&) stereo mixes
+</p>
+
 
 
 </div>
