--- a/me.html
+++ b/me.html
@@ -34,7 +34,7 @@ Ben Cowper
 cowpervideos@gmail.com
 </h1>
 
-<br>
+<hr>
 
 <p>I have been making short films for over ten years specializing in Editing and Cinematography. The following is a summary of my skill set:</p>
 
@@ -52,6 +52,20 @@ cowpervideos@gmail.com
 
 <p>
   <b>Sound Recordist/Mixing</b> Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 &amp; (&) stereo mixes
+</p>
+
+<p>
+  <b>Archivist</b> Digital transfer and preservation of archaic media formats.
+</p>
+
+<p>
+  <b>Live Streaming</b> Installing and live switching video, audio, and slideshows for conferences.
+</p>
+
+<hr>
+
+<p>
+  more
 </p>
 
 
