--- a/me.html
+++ b/me.html
@@ -47,15 +47,15 @@ cowpervideos@gmail.com
 </p>
 
 <p>
-  <b>Lighting Designer</b> Arri, Lowel, Kino, ETC
+  <b>Lighting Designer</b> Arri, Lowel, Kino, ETC for live show and film applications.
 </p>
 
 <p>
-  <b>Sound Recordist/Mixing</b> Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 &amp; (&) stereo mixes
+  <b>Sound Recordist/Mixing</b> Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 surround and stereo mixes.
 </p>
 
 <p>
-  <b>Archivist</b> Digital transfer and preservation of archaic media formats.
+  <b>Archivist</b> Digital transfer and preservation of archaic media formats (film, VHS, magnetic tape, etc.)
 </p>
 
 <p>
