--- a/me.html
+++ b/me.html
@@ -26,6 +26,7 @@
 
 <div style="margin-left:20%;padding:1px 16px;height:1000px;">
 
+<center>
 <h2>
 Ben Cowper
 <br>
@@ -33,8 +34,9 @@ Ben Cowper
 <br>
 cowpervideos@gmail.com
 </h2>
+</center>
 
-<hr>
+<hr color="#50A8AF">
 
 <p>I have been making short films for over ten years specializing in Editing and Cinematography. The following is a summary of my skill set:</p>
 
