--- a/me.html
+++ b/me.html
@@ -22,8 +22,9 @@
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
 
-<div style="margin-left:20%;padding:1px 16px;height:1000px;">
+<div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
+<div border: 5px solid green;>
 <center>
 <h2>
 Ben Cowper
@@ -33,6 +34,7 @@ Ben Cowper
 cowpervideos@gmail.com
 </h2>
 </center>
+</div>
 
 <hr color="#50A8AF">
 
