--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-
 <title>Ben Cowper | film</title>
-
 <link rel="stylesheet" href="styles.css">
-
 </head>
-
-
 
 <body>
 
@@ -26,12 +20,15 @@
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
-<h1>film</h1>
+<h2>
+	film
+</h2>
+
+<hr color="#50A8AF">
 
 <p>content content content</p>
 
 </div>
 
 </body>
-
 </html>
