--- a/me.html
+++ b/me.html
@@ -28,6 +28,8 @@ Ben Cowper
 cowpervideos@gmail.com
 </h2>
 
+<hr color="#af5750">
+
 <p>
   <b>Cinematographer</b> Canon 5DmkIII (Magic Lantern), Canon C100, Canon 60D, Blackmagic, GoPro, Sony, JVC, Panasonic, Nikon, 16mm Bolex, Super 8, Glidecam, digital/analog still photography (35, medium, large format)
 </p>
