--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
-<hr color="#af5750">
+<hr color="#50A8AF">
 
 <p>content content content</p>
 
