--- a/me.html
+++ b/me.html
@@ -20,7 +20,7 @@
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
-<hr color="#af5750">
+<hr color="#50A8AF">
 
 <h2>
 Ben Cowper
@@ -29,6 +29,8 @@ Ben Cowper
 <br>
 cowpervideos@gmail.com
 </h2>
+
+<hr color="#50A8AF">
 
 <p>
   <b>Cinematographer</b> Canon 5DmkIII (Magic Lantern), Canon C100, Canon 60D, Blackmagic, GoPro, Sony, JVC, Panasonic, Nikon, 16mm Bolex, Super 8, Glidecam, digital/analog still photography (35, medium, large format)
