--- a/me.html
+++ b/me.html
@@ -4,6 +4,12 @@
 <head>
 <title>Ben Cowper | me</title>
 <link rel="stylesheet" href="styles.css">
+<style>
+img {
+  float: left;
+  margin: 0px 17px 0px 0px;
+}
+</style>
 </head>
 
 <body>
@@ -32,11 +38,11 @@ cowpervideos@gmail.com
 
 <hr color="#50A8AF">
 
-<p>
+<p><img src="Ben_Cowper.jpg" alt="Ben Cowper">
   <b>Cinematographer</b> Canon 5DmkIII (Magic Lantern), Canon C100, Canon 60D, Blackmagic, GoPro, Sony, JVC, Panasonic, Nikon, 16mm Bolex, Super 8, Glidecam, digital/analog still photography (35, medium, large format)
-</p>
+  
+<br>
 
-<p>
   <b>Editor/Colorist</b> Adobe Premiere, After Effects, Photoshop, Speedgrade, Final Cut Pro, Avid, DaVinci Resolve
 </p>
 
