--- a/me.html
+++ b/me.html
@@ -38,28 +38,30 @@ cowpervideos@gmail.com
 
 <hr color="#50A8AF">
 
-<p><img src="Ben_Cowper.jpg" alt="Ben Cowper">
+<p><img src="Ben_Cowper.jpg" alt="Ben Cowper" height: "300px" width: "auto">
+
   <b>Cinematographer</b> Canon 5DmkIII (Magic Lantern), Canon C100, Canon 60D, Blackmagic, GoPro, Sony, JVC, Panasonic, Nikon, 16mm Bolex, Super 8, Glidecam, digital/analog still photography (35, medium, large format)
-  
+
 <br>
 
   <b>Editor/Colorist</b> Adobe Premiere, After Effects, Photoshop, Speedgrade, Final Cut Pro, Avid, DaVinci Resolve
-</p>
 
-<p>
+<br>
+
   <b>Lighting Designer</b> Arri, Lowel, Kino, ETC for live show and film applications.
-</p>
 
-<p>
+<br>
+
   <b>Sound Recordist/Mixing</b> Zoom, Tascam, ProTools, Logic, Adobe Audition 5.1 surround and stereo mixes.
-</p>
 
-<p>
+<br>
+
   <b>Archivist</b> Digital transfer and preservation of archaic media formats (film, VHS, magnetic tape, etc.)
-</p>
 
-<p>
+<br>
+
   <b>Live Streaming</b> Installing and live switching video, audio, and slideshows for conferences.
+
 </p>
 
 <hr>
