--- a/me.html
+++ b/me.html
@@ -68,12 +68,21 @@ cowpervideos@gmail.com
 
 <br><br>
 
-<hr>
+<hr color="#af5750">
+
+<h3>Education</h3>
 
 <p>
-  more
+Hampshire College (2016)
+<br>
+Bachelor of Arts in Film and Video Production
 </p>
 
+<p>
+Kingswood Oxford (2012)
+<br>
+High School Diploma
+</p>
 
 
 </div>
