--- a/me.html
+++ b/me.html
@@ -70,7 +70,14 @@ cowpervideos@gmail.com
 
 <hr color="#af5750">
 
-<h3>Education</h3>
+
+<style>
+col {
+  float: left;
+}
+<style>
+
+<h3>col Education</h3>
 
 <p>
 Hampshire College (2016)
