--- a/me.html
+++ b/me.html
@@ -71,13 +71,9 @@ cowpervideos@gmail.com
 <hr color="#af5750">
 
 
-<style>
-col {
-  float: right;
-}
-<style>
+<div text-align: center;>
 
-<h3>col Education</h3>
+<h3>Education</h3>
 
 <p>
 Hampshire College (2016)
@@ -90,6 +86,8 @@ Kingswood Oxford (2012)
 <br>
 High School Diploma
 </p>
+
+</div>
 
 
 </div>
