--- a/me.html
+++ b/me.html
@@ -71,7 +71,18 @@ cowpervideos@gmail.com
 <hr color="#af5750">
 
 
-<div text-align: center;>
+<section>
+  <code>&#60;section&#62; <br> float: left;</code>
+</section>
+
+<section>
+  <code>&#60;section&#62; <br> float: left;</code>
+</section>
+
+<section>
+  <code>&#60;section&#62; <br> float: left;</code>
+</section>
+
 
 <h3>Education</h3>
 
