--- a/me.html
+++ b/me.html
@@ -72,18 +72,6 @@ cowpervideos@gmail.com
 
 
 <section>
-  <code>&#60;section&#62; <br> float: left;</code>
-</section>
-
-<section>
-  <code>&#60;section&#62; <br> float: left;</code>
-</section>
-
-<section>
-  <code>&#60;section&#62; <br> float: left;</code>
-</section>
-
-
 <h3>Education</h3>
 
 <p>
@@ -97,8 +85,40 @@ Kingswood Oxford (2012)
 <br>
 High School Diploma
 </p>
+</section>
 
-</div>
+<section>
+<h3>Professional</h3>
+
+<p>
+Hampshire College (2016)
+<br>
+Bachelor of Arts in Film and Video Production
+</p>
+
+<p>
+Kingswood Oxford (2012)
+<br>
+High School Diploma
+</p>
+</section>
+
+<section>
+<h3>Other</h3>
+
+<p>
+Hampshire College (2016)
+<br>
+Bachelor of Arts in Film and Video Production
+</p>
+
+<p>
+Kingswood Oxford (2012)
+<br>
+High School Diploma
+</p>
+</section>
+
 
 
 </div>
