--- a/me.html
+++ b/me.html
@@ -73,35 +73,55 @@ cowpervideos@gmail.com
 
 <section>
 <h3>Education</h3>
-
 <p>
 Hampshire College (2016)
 <br>
 Bachelor of Arts in Film and Video Production
 </p>
-
 <p>
 Kingswood Oxford (2012)
 <br>
 High School Diploma
 </p>
+
+<h3>Awards and Achievements</h3>
+<p>
+  Director of Photography Darkville (Channel 101 show, screened 2 episodes at UCB Theatre 2015 & 2016)
+</p>
+<p>
+  Recipient of Tom Joslin Grant at Hampshire College (2016)
+</p>
+<p>
+  Recipient of Green Prize for excellence in dramatics at Kingswood Oxford (2012)
+</p>
+<p>
+  Director The Great Gatsby (Short, screened at Williston-Northampton Film Festival 2010)
+</p>
 </section>
+
 
 <section>
 <h3>Professional</h3>
-
 <p>
-Hampshire College (2016)
+<b>Freelance Filmmaker (2008 - Present)</b>
 <br>
-Bachelor of Arts in Film and Video Production
+Founder of freelance production company, filmed and edited over 75 projects for a wide variety of commercial and independent clients including: Yale University, Global Fibrosis Foundation, Madhatters Theatre, Cambridge University Press, Guilford Art Center, Artful Living, Shoreline Actors Collective, The Country School, Hampshire College, Mount Holyoke College, Northampton Chamber of Commerce, ServiceNet, and The Shanghai String Quartet.
 </p>
-
 <p>
-Kingswood Oxford (2012)
+<b>Straight Ahead Pictures (2016 - Present)</b>
 <br>
-High School Diploma
+Web design, marketing, and fundraising for the American Masters documentary Becoming Helen Keller. 
+</p>
+<p>
+<b>San Francisco Frozen Film Festival (2014)</b>
+<br>
+Festival intern in charge of promotion, fundraising, projection, selection and curation of films. 
 </p>
 </section>
+
+
+
+
 
 <section>
 <h3>Other</h3>
