--- a/me.html
+++ b/me.html
@@ -124,18 +124,44 @@ Festival intern in charge of promotion, fundraising, projection, selection and c
 
 
 <section>
-<h3>Other</h3>
-
+<h3>Teaching Experience</h3>
 <p>
-Hampshire College (2016)
+<b>Amherst College (2016)</b>
 <br>
-Bachelor of Arts in Film and Video Production
+Guest instructor for film studies class
 </p>
-
 <p>
-Kingswood Oxford (2012)
+<b>Hampshire College (2013 - 2016)</b>
 <br>
-High School Diploma
+TA for 4 film production classes
+<br>
+Assistant instructor for 2 years at Creative Media Institute
+<br>
+Teaching Assistant Seminar Certificate
+<br>
+Designed and taught a college level video course for one semester
+</p>
+<h3>Other Skills</h3>
+<p>
+  <b>Web/Graphic Design</b>
+<br>
+  Designer for multiple clients (Illustrator, InDesign, Squarespace, Wix, Wordpress)
+<br>
+  <b>Programming/IT</b>
+<br>
+  Python, HTML, CSS, Arduino, Mobile Apps, Apple hardware and software tech.
+<br>
+  <b>Journalism</b>
+<br>
+  Staff writer, photographer, editor for The Climax print and web newspaper.
+<br>
+  <b>Radio Host (2012 - 2015)</b>
+<br>
+  Produced two college shows, skilled with production and broadcast equipment.
+<br>
+  <b>80 WPM Typist</b>
+<br>
+  (Transcription, Microsoft Office, Google Drive, iCloud)
 </p>
 </section>
 
