--- a/me.html
+++ b/me.html
@@ -17,7 +17,7 @@ img {
 <ul>
   <li><a href="index.html">film</a></li>
   <li><a class="active" href="me.html">me</a></li>
-  <li><a href="#demoreel">demo reel</a></li>
+  <li><a href="reel.html">reel</a></li>
   <li><a href="#resume">resume</a></li>
   <li><a href="#commercial">commercial</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
