--- a/reel.html
+++ b/reel.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-<title>Ben Cowper | film</title>
+<title>Ben Cowper | reel</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
 <ul>
-  <li><a class="active" href="index.html">film</a></li>
+  <li><a href="index.html">film</a></li>
   <li><a href="me.html">me</a></li>
-  <li><a href="reel.html">reel</a></li>
+  <li><a class="active" href="reel.html">reel</a></li>
   <li><a href="#resume">resume</a></li>
   <li><a href="#commercial">commercial</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
