--- a/reel.html
+++ b/reel.html
@@ -22,7 +22,9 @@
 
 <hr color="#50A8AF">
 
-<p>content content content</p>
+
+
+<p><iframe src="https://player.vimeo.com/video/87645149?color=af5750&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
 
 </div>
 
