--- a/reel.html
+++ b/reel.html
@@ -26,9 +26,13 @@
 	<iframe src="https://player.vimeo.com/video/87645149?color=af5750&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </video>
 
+<h3>
+	DP + Editing Reel (2016)
+</h3>
+
 <p>
-	
-	</p>
+	All clips photographed and edited by Ben Cowper
+</p>
 
 
 </div>
