--- a/reel.html
+++ b/reel.html
@@ -22,9 +22,9 @@
 
 <hr color="#50A8AF">
 
-<video>
+<center>
 	<iframe src="https://player.vimeo.com/video/87645149?color=af5750&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</video>
+</center>
 
 <h3>
 	DP + Editing Reel (2016)
