heading to reel

--- a/reel.html
+++ b/reel.html
@@ -22,18 +22,17 @@
 
 <hr color="#50A8AF">
 
+<h2>
+	DP + Editing Reel (2016)
+<br><br>
+	All clips photographed and edited by Ben Cowper
+</h2>
+
+<hr color="#50A8AF">
+
 <center>
 	<iframe src="https://player.vimeo.com/video/87645149?color=af5750&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </center>
-
-<h3>
-	DP + Editing Reel (2016)
-</h3>
-
-<p>
-	All clips photographed and edited by Ben Cowper
-</p>
-
 
 </div>
 
