--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <li><a class="active" href="index.html">film</a></li>
   <li><a href="me.html">me</a></li>
   <li><a href="reel.html">reel</a></li>
-  <li><a href="#resume">resume</a></li>
+  <li><a target="_blank" href="Cowper_Resume.pdf">resume</a></li>
   <li><a href="#commercial">commercial</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
