--- a/me.html
+++ b/me.html
@@ -119,44 +119,30 @@ Festival intern in charge of promotion, fundraising, projection, selection and c
 </section>
 
 <section>
-<h3>Teaching Experience</h3>
+<h3>Teaching</h3>
 <p>
-<b>Amherst College (2016)</b>
-<br>
-Guest instructor for film studies class
-</p>
-<p>
-<b>Hampshire College (2013 - 2016)</b>
-<br>
-TA for 4 film production classes
-<br>
+Guest Instructor for Amherst College film studies class (2016)
+<br><br>
+Teaching Assistant for 4 Hampshire College film production classes (2013 - 2016)
+<br><br>
 Assistant instructor for 2 years at Creative Media Institute
-<br>
+<br><br>
 Teaching Assistant Seminar Certificate
-<br>
+<br><br>
 Designed and taught a college level video course for one semester
+<br>
 </p>
-<h3>Other Skills</h3>
+<h3>Other</h3>
 <p>
-  <b>Web/Graphic Design</b>
-<br>
-  Designer for multiple clients (Illustrator, InDesign, Squarespace, Wix, Wordpress)
-<br>
-  <b>Programming/IT</b>
-<br>
-  Python, HTML, CSS, Arduino, Mobile Apps, Apple hardware and software tech.
-<br>
-  <b>Journalism</b>
-<br>
-  Staff writer, photographer, editor for The Climax print and web newspaper.
-<br>
-  <b>Radio Host (2012 - 2015)</b>
-<br>
-  Produced two college shows, skilled with production and broadcast equipment.
-<br>
-  <b>80 WPM Typist</b>
-<br>
-  (Transcription, Microsoft Office, Google Drive, iCloud)
+  <b>Web/Graphic Designer</b> for multiple clients (Illustrator, InDesign, Squarespace, Wix, Wordpress)
+<br><br>
+  <b>Programming/IT</b> Python, HTML, CSS, Arduino, Mobile Apps, Apple hardware and software tech.
+<br><br>
+  <b>Journalism</b> Staff writer, photographer, editor for The Climax print and web newspaper.
+<br><br>
+  <b>Radio Host (2012 - 2015)</b> Produced two college shows, skilled with production and broadcast equipment.
+<br><br>
+  <b>80 WPM Typist</b> (Transcription, Microsoft Office, Google Drive, iCloud)
 </p>
 </section>
 
