--- a/me.html
+++ b/me.html
@@ -121,15 +121,15 @@ Festival intern in charge of promotion, fundraising, projection, selection and c
 <section>
 <h3>Teaching</h3>
 <p>
-Guest Instructor for Amherst College film studies class (2016)
+<b>Guest Instructor</b> for Amherst College film studies class (2016)
 <br><br>
-Teaching Assistant for 4 Hampshire College film production classes (2013 - 2016)
+<b>Assistant instructor</b> at Creative Media Institute (2015 - 2016)
 <br><br>
-Assistant instructor for 2 years at Creative Media Institute
+<b>Teaching Assistant</b> for 4 Hampshire College film production classes (2013 - 2016)
 <br><br>
-Teaching Assistant Seminar Certificate
+Teaching Assistant Seminar Certificate (2015)
 <br><br>
-Designed and taught a college level video course for one semester
+<b>Instructor</b> Designed and taught a semester long film course at Hampshire College for 12 students (2014)
 <br>
 </p>
 <h3>Other</h3>
