--- a/me.html
+++ b/me.html
@@ -84,23 +84,23 @@ Kingswood Oxford (2012)
 High School Diploma
 </p>
 
-<h3>Awards and Achievements</h3>
+<h3>Teaching</h3>
 <p>
-  Director of Photography Darkville (Channel 101 show, screened 2 episodes at UCB Theatre 2015 & 2016)
-</p>
-<p>
-  Recipient of Tom Joslin Grant at Hampshire College (2016)
-</p>
-<p>
-  Recipient of Green Prize for excellence in dramatics at Kingswood Oxford (2012)
-</p>
-<p>
-  Director The Great Gatsby (Short, screened at Williston-Northampton Film Festival 2010)
+<b>Guest Instructor</b> for Amherst College film studies class (2016)
+<br><br>
+<b>Assistant instructor</b> at Creative Media Institute (2015 - 2016)
+<br><br>
+<b>Teaching Assistant</b> for 4 Hampshire College film production classes (2013 - 2016)
+<br><br>
+Teaching Assistant Seminar Certificate (2015)
+<br><br>
+<b>Instructor</b> and designer of a semester long film course at Hampshire College for 12 students (2014)
+<br>
 </p>
 </section>
 
 <section>
-<h3>Professional</h3>
+<h3>Film and Video</h3>
 <p>
 <b>Freelance Filmmaker (2008 - Present)</b>
 <br>
@@ -119,19 +119,6 @@ Festival intern in charge of promotion, fundraising, projection, selection and c
 </section>
 
 <section>
-<h3>Teaching</h3>
-<p>
-<b>Guest Instructor</b> for Amherst College film studies class (2016)
-<br><br>
-<b>Assistant instructor</b> at Creative Media Institute (2015 - 2016)
-<br><br>
-<b>Teaching Assistant</b> for 4 Hampshire College film production classes (2013 - 2016)
-<br><br>
-Teaching Assistant Seminar Certificate (2015)
-<br><br>
-<b>Instructor</b> Designed and taught a semester long film course at Hampshire College for 12 students (2014)
-<br>
-</p>
 <h3>Other</h3>
 <p>
   <b>Web/Graphic Designer</b> for multiple clients (Illustrator, InDesign, Squarespace, Wix, Wordpress)
@@ -143,6 +130,20 @@ Teaching Assistant Seminar Certificate (2015)
   <b>Radio Host (2012 - 2015)</b> Produced two college shows, skilled with production and broadcast equipment.
 <br><br>
   <b>80 WPM Typist</b> (Transcription, Microsoft Office, Google Drive, iCloud)
+</p>
+
+<h3>Awards and Achievements</h3>
+<p>
+  Director of Photography Darkville (Channel 101 show, screened 2 episodes at UCB Theatre 2015 & 2016)
+</p>
+<p>
+  Recipient of Tom Joslin Grant at Hampshire College (2016)
+</p>
+<p>
+  Recipient of Green Prize for excellence in dramatics at Kingswood Oxford (2012)
+</p>
+<p>
+  Director The Great Gatsby (Short, screened at Williston-Northampton Film Festival 2010)
 </p>
 </section>
 
