--- a/me.html
+++ b/me.html
@@ -74,12 +74,11 @@ cowpervideos@gmail.com
 <section>
 <h3>Education</h3>
 <p>
-Hampshire College (2016)
+<b>Hampshire College</b> (2016)
 <br>
 Bachelor of Arts in Film and Video Production
-</p>
-<p>
-Kingswood Oxford (2012)
+<br><br>
+<b>Kingswood Oxford</b> (2012)
 <br>
 High School Diploma
 </p>
@@ -90,7 +89,7 @@ High School Diploma
 <p>
 <b>Guest Instructor</b> for Amherst College film studies class (2016)
 <br><br>
-<b>Assistant instructor</b> at Creative Media Institute (2015 - 2016)
+<b>Assistant Instructor</b> at Creative Media Institute (2015 - 2016)
 <br><br>
 <b>Teaching Assistant</b> for 4 Hampshire College film production classes (2013 - 2016)
 <br><br>
@@ -104,12 +103,12 @@ Teaching Assistant Seminar Certificate (2015)
 <section>
 <h3>Film and Video</h3>
 <p>
-<b>Freelance Filmmaker (2008 - Present)</b>
+<b>Freelance Filmmaker (2008 - )</b>
 <br>
 Founder of freelance production company, filmed and edited over 75 projects for a wide variety of commercial and independent clients including: Yale University, Global Fibrosis Foundation, Madhatters Theatre, Cambridge University Press, Guilford Art Center, Artful Living, Shoreline Actors Collective, The Country School, Hampshire College, Mount Holyoke College, Northampton Chamber of Commerce, ServiceNet, and The Shanghai String Quartet.
 </p>
 <p>
-<b>Straight Ahead Pictures (2016 - Present)</b>
+<b>Straight Ahead Pictures (2016 - )</b>
 <br>
 Web design, marketing, and fundraising for the American Masters documentary Becoming Helen Keller. 
 </p>
