--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 <div class="clearfix"></div>
 
 <div style="padding:6px;">
+
+<center>
 <p>
 TRT 17m
 <br><br>
@@ -75,6 +77,7 @@ An experimental horror film about a hitchhiker’s descent into madness, adapted
 <br><br>
 (For a private screening, please contact me directly.)
 </p>
+</center>
 
 </div>
 
