--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href="img_fjords.jpg">
-      <img src="img_fjords.jpg" alt="Trolltunga Norway" width="300" height="auto">
+    <a target="_blank" href="Placeholder.jpg">
+      <img src="Placeholder.jpg" alt="Placeholder" width="300" height="auto">
     </a>
   </div>
 </div>
@@ -41,24 +41,24 @@
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="auto">
+    <a target="_blank" href="Placeholder.jpg">
+      <img src="Placeholder.jpg" alt="Placeholder" width="300" height="auto">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="auto">
+    <a target="_blank" href="Placeholder.jpg">
+      <img src="Placeholder.jpg" alt="Placeholder" width="300" height="auto">
     </a>
   </div>
 </div>
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="auto">
+    <a target="_blank" href="Placeholder.jpg">
+      <img src="Placeholder.jpg" alt="Placeholder" width="300" height="auto">
     </a>
   </div>
 </div>
