--- a/index.html
+++ b/index.html
@@ -4,6 +4,47 @@
 <head>
 <title>Ben Cowper | film</title>
 <link rel="stylesheet" href="styles.css">
+<style>
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px){
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .responsive {
+        width: 100%;
+    }
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+</style>
 </head>
 
 <body>
@@ -75,7 +116,7 @@ director, editor, cinematographer
 <br><br><br>
 An experimental horror film about a hitchhiker’s descent into madness, adapted from a short story by Stephen King. The film was produced through King’s dollar baby program as my thesis film at Hampshire College.
 <br><br>
-(For a private screening, please contact me directly.)
+(For a private screening, please contact me directly)
 </p>
 </center>
 
