--- a/index.html
+++ b/index.html
@@ -4,45 +4,36 @@
 <head>
 <title>Ben Cowper | film</title>
 <link rel="stylesheet" href="styles.css">
-<style>
-
-div.img img {
-    width: 100%;
-    height: auto;
+<style type="text/css">
+body {
+  background: #222;
+  color: #eee;
+  margin-top: 20px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+a {
+  color: #FFF;
+}
+a:hover {
+  color: yellow;
+  text-decoration: underline;
+}
+.thumbnails img {
+  height: 80px;
+  border: 4px solid #555;
+  padding: 1px;
+  margin: 0 10px 10px 0;
 }
 
-div.desc {
-    padding: 15px;
-    text-align: center;
+.thumbnails img:hover {
+  border: 4px solid #00ccff;
+  cursor:pointer;
 }
 
-* {
-    box-sizing: border-box;
-}
-
-.responsive {
-    padding: 0 6px;
-    float: left;
-    width: 24.99999%;
-}
-
-@media only screen and (max-width: 700px){
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
-}
-
-@media only screen and (max-width: 500px){
-    .responsive {
-        width: 100%;
-    }
-}
-
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
+.preview img {
+  border: 4px solid #444;
+  padding: 1px;
+  width: 800px;
 }
 </style>
 </head>
@@ -71,42 +62,23 @@ div.desc {
 
 <br>
 
-<div class="responsive">
-  <div class="img">
-    <a target="_blank" href="Placeholder.jpg">
-      <img src="Placeholder.jpg" alt="Placeholder" width="300" height="auto">
-    </a>
+<div class="gallery" align="center">
+
+  <br />
+
+  <div class="thumbnails">
+    <img onmouseover="preview.src=img1.src" name="img1" src="images/img1.jpg" alt=""/>
+    <img onmouseover="preview.src=img2.src" name="img2" src="images/img2.jpg" alt=""/>
+    <img onmouseover="preview.src=img3.src" name="img3" src="images/img3.jpg" alt=""/>
+    <img onmouseover="preview.src=img4.src" name="img4" src="images/img4.jpg" alt=""/>
+    <img onmouseover="preview.src=img5.src" name="img5" src="images/img5.jpg" alt=""/>
+  </div><br/>
+
+  <div class="preview" align="center">
+    <img name="preview" src="images/img1.jpg" alt=""/>
   </div>
+
 </div>
-
-
-<div class="responsive">
-  <div class="img">
-    <a target="_blank" href="Placeholder.jpg">
-      <img src="Placeholder.jpg" alt="Placeholder" width="300" height="auto">
-    </a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="img">
-    <a target="_blank" href="Placeholder.jpg">
-      <img src="Placeholder.jpg" alt="Placeholder" width="300" height="auto">
-    </a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="img">
-    <a target="_blank" href="Placeholder.jpg">
-      <img src="Placeholder.jpg" alt="Placeholder" width="300" height="auto">
-    </a>
-  </div>
-</div>
-
-<div class="clearfix"></div>
-
-<div style="padding:6px;">
 
 <center>
 <p>
