--- a/me.html
+++ b/me.html
@@ -40,7 +40,7 @@ cowpervideos@gmail.com
 
 <br>
 
-<p><img src="Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
+<p><img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
 
   <b>Cinematographer</b> Canon 5DmkIII (Magic Lantern), Canon C100, Canon 60D, Blackmagic, GoPro, Sony, JVC, Panasonic, Nikon, 16mm Bolex, Super 8, Glidecam, digital/analog still photography (35, medium, large format)
 
