--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@ a:hover {
   <br />
 
     <div class="preview" align="center">
-    <img name="preview" src="images/img1.jpg" alt=""/>
+    <img name="preview" src="images/Placeholder.jpg" alt="Placeholder-alt"/>
   </div>
 
   <br/>
 
   <div class="thumbnails">
-    <img onmouseover="preview.src=img1.src" name="img1" src="images/img1.jpg" alt=""/>
-    <img onmouseover="preview.src=img2.src" name="img2" src="images/img2.jpg" alt=""/>
-    <img onmouseover="preview.src=img3.src" name="img3" src="images/img3.jpg" alt=""/>
-    <img onmouseover="preview.src=img4.src" name="img4" src="images/img4.jpg" alt=""/>
-    <img onmouseover="preview.src=img5.src" name="img5" src="images/img5.jpg" alt=""/>
+    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt="Placeholder-alt"/>
+    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
+    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
+    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
+    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
   </div>
 
 </div>
