--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ a:hover {
     <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
     <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
     <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
+    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
   </div>
 
 </div>
