--- a/index.html
+++ b/index.html
@@ -6,28 +6,20 @@
 
 <style type="text/css">
 
-a {
-  color: #FFF;
-}
-a:hover {
-  color: yellow;
-  text-decoration: underline;
-}
 .thumbnails img {
   height: 80px;
-  border: 1px solid #555;
+  border: 1px solid #7a7a7a;
   padding: 1px;
   margin: 0 10px 10px 0;
 }
 
 .thumbnails img:hover {
-  border: 1px solid #00ccff;
+  border: 2px solid #af5750;
   cursor:pointer;
 }
 
 .preview img {
-  border: 1px solid #444;
-  padding: 1px;
+  border: 1px solid #7a7a7a;
   width: 800px;
 }
 </style>
@@ -63,18 +55,18 @@ a:hover {
   <br />
 
     <div class="preview" align="center">
-    <img name="preview" src="images/Placeholder.jpg" alt="Placeholder-alt"/>
+    <img name="preview" src="images/Placeholder.jpg" alt="Nona"/>
   </div>
 
   <br/>
 
   <div class="thumbnails">
-    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt="Placeholder-alt"/>
-    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
-    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
-    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
-    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
-    <img onmouseover="preview.src=Placeholder.src" name="Placeholder" src="images/Placeholder.jpg" alt=""/>
+    <img onmouseover="preview.src=Placeholder.src" name="Nona 1" src="images/Placeholder.jpg" alt="Nona 1"/>
+    <img onmouseover="preview.src=Placeholder.src" name="Nona 2" src="images/Placeholder.jpg" alt="Nona 2"/>
+    <img onmouseover="preview.src=Placeholder.src" name="Nona 3" src="images/Placeholder.jpg" alt="Nona 3"/>
+    <img onmouseover="preview.src=Placeholder.src" name="Nona 4" src="images/Placeholder.jpg" alt="Nona 4"/>
+    <img onmouseover="preview.src=Placeholder.src" name="Nona 5" src="images/Placeholder.jpg" alt="Nona 5"/>
+    <img onmouseover="preview.src=Placeholder.src" name="Nona 6" src="images/Placeholder.jpg" alt="Nona 6"/>
   </div>
 
 </div>
