--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 .thumbnails img:hover {
   border: 2px solid #af5750;
+  padding: 1px;
   cursor:pointer;
 }
 
 .preview img {
-  border: 1px solid #7a7a7a;
   width: 800px;
 }
 </style>
