--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 .thumbnails img {
   height: 80px;
-  border: 2px solid #7a7a7a;
+  border: 2px solid #eeeeee;
   padding: 1px;
   margin: 0 10px 10px 0;
 }
