--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
   <li><a href="#commercial">commercial</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
+  <li><div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="bencowper"><a class="LI-simple-link" href='https://www.linkedin.com/in/bencowper?trk=profile-badge'>Ben Cowper</a></div>
 </ul>
-
-<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="bencowper"><a class="LI-simple-link" href='https://www.linkedin.com/in/bencowper?trk=profile-badge'>Ben Cowper</a></div>
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
