--- a/me.html
+++ b/me.html
@@ -33,7 +33,7 @@ Ben Cowper
 <br>
 (860) - 221 - 4650
 <br>
-cowpervideos@gmail.com
+<a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
 </h2>
 
 <hr color="#50A8AF">
