--- a/me.html
+++ b/me.html
@@ -22,6 +22,7 @@ img {
   <li><a href="#commercial">commercial</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
+  <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
 </ul>
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
@@ -30,10 +31,6 @@ img {
 
 <h2>
 Ben Cowper
-<br>
-(860) - 221 - 4650
-<br>
-<a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
 </h2>
 
 <hr color="#50A8AF">
