added to all sidebars

--- a/reel.html
+++ b/reel.html
@@ -16,6 +16,7 @@
   <li><a href="#commercial">commercial</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
+  <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
 </ul>
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
