--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
 <ul>
   <li><a class="active" href="index.html">film</a></li>
-  <li><a href="me.html"> me</a></li>
-  <li><a href="reel.html">  reel</a></li>
-  <li><a target="_blank" href="Cowper_Resume.pdf">   resume</a></li>
-  <li><a href="#commercial">    commercial</a></li>
-  <li><a target="_blank" href="https://linkedin.com/in/bencowper">     linkedin</a></li>
-  <li><a target="_blank" href="https://vimeo.com/bencowper">      vimeo</a></li>
-  <li><a href="mailto:cowpervideos@gmail.com">       email</a></li>
+  <li><a href="me.html">me</a></li>
+  <li><a href="reel.html">reel</a></li>
+  <li><a target="_blank" href="Cowper_Resume.pdf">resume</a></li>
+  <li><a href="#commercial">commercial</a></li>
+  <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
+  <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
+  <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
 </ul>
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
@@ -70,13 +70,13 @@
 
 <center>
 <p>
-TRT 17m
+  TRT 17m
 <br><br>
-director, editor, cinematographer
+  director, editor, cinematographer
 <br><br>
-An experimental horror film about a hitchhiker’s descent into madness, adapted from a short story by Stephen King. The film was produced through King’s dollar baby program as my thesis film at Hampshire College.
+  An experimental horror film about a hitchhiker’s descent into madness, adapted from a short story by Stephen King. The film was produced through King’s dollar baby program as my thesis film at Hampshire College.
 <br><br>
-(For a private screening, please contact me directly)
+  (For a private screening, please contact me directly)
 </p>
 </center>
 
@@ -96,7 +96,11 @@ An experimental horror film about a hitchhiker’s descent into madness, adapted
   <iframe width="800" height="450" src="https://www.youtube.com/embed/hZtUYXg1Vdk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 <br><br>
 <p>
-  Camera and assistant lighting
+  TRT 1:13
+<br><br>
+  camera, assistant lighting
+<br><br>
+  A short interview with Ken Burns for Hampshire College.
 </p>
 </center>
 
@@ -116,11 +120,11 @@ An experimental horror film about a hitchhiker’s descent into madness, adapted
   <iframe src="https://player.vimeo.com/video/132660943?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
-TRT 3:14
+  TRT 3:14
 <br><br>
-director, editor, cinematographer, performer
+  director, editor, cinematographer, performer
 <br><br>
-An experimental short film.
+  An experimental short film.
 </p>
 </center>
 
