--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="gallery" align="center">
 
     <div class="preview" align="center">
-    <img name="preview" src="images/Placeholder.jpg" alt="Nona"/>
+    <img name="preview" src="images/Nona1.jpg" alt="Nona"/>
   </div>
 
   <div class="thumbnails">
