--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 
   <div class="thumbnails">
-    <img onmouseover="preview.src=Placeholder.src" name="Nona 1" src="images/Nona1.jpg" alt="Nona 1"/>
+    <img onmouseover="preview.src=Nona1.src" name="Nona 1" src="images/Nona1.jpg" alt="Nona 1"/>
     <img onmouseover="preview.src=Placeholder.src" name="Nona 2" src="images/Nona2.jpg" alt="Nona 2"/>
     <img onmouseover="preview.src=Placeholder.src" name="Nona 3" src="images/Nona3.jpg" alt="Nona 3"/>
     <img onmouseover="preview.src=Placeholder.src" name="Nona 4" src="images/Nona4.jpg" alt="Nona 4"/>
