--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 <div class="gallery" align="center">
 
     <div class="preview" align="center">
-    <img name="preview" src="images/Nona1.jpg" alt="Nona"/>
+    <img id="preview" src="images/Nona1.jpg" alt="Nona"/>
   </div>
 
   <div class="thumbnails">
     <img onmouseover="preview.src=Nona1.src" name="Nona1" src="images/Nona1.jpg" alt="Nona 1"/>
-    <img onmouseover="preview.src=Nona2.src" name="Nona2" src="images/Nona2.jpg" alt="Nona 2"/>
     <img onmouseover="preview.src=Nona3.src" name="Nona3" src="images/Nona3.jpg" alt="Nona 3"/>
     <img onmouseover="preview.src=Nona4.src" name="Nona4" src="images/Nona4.jpg" alt="Nona 4"/>
+    <img onmouseover="getElementByID('preview').src=getElementByID('Nona2').src" id="Nona2" src="images/Nona2.jpg" alt="Nona 2"/>
     <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
     <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
   </div>
