--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
   </div>
 
   <div class="thumbnails">
-    <img onmouseover="preview.src=Nona1.src" name="Nona1" src="images/Nona1.jpg" alt="Nona 1"/>
-    <img onmouseover="preview.src=Nona3.src" name="Nona3" src="images/Nona3.jpg" alt="Nona 3"/>
-    <img onmouseover="preview.src=Nona4.src" name="Nona4" src="images/Nona4.jpg" alt="Nona 4"/>
+    <img onmouseover="getElementByID('preview').src=getElementByID('Nona1').src" id="Nona1" src="images/Nona1.jpg" alt="Nona 1"/>
     <img onmouseover="getElementByID('preview').src=getElementByID('Nona2').src" id="Nona2" src="images/Nona2.jpg" alt="Nona 2"/>
-    <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
-    <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
+    <img onmouseover="getElementByID('preview').src=getElementByID('Nona3').src" id="Nona3" src="images/Nona3.jpg" alt="Nona 3"/>
+    <img onmouseover="getElementByID('preview').src=getElementByID('Nona4').src" id="Nona4" src="images/Nona4.jpg" alt="Nona 4"/>
+    <img onmouseover="getElementByID('preview').src=getElementByID('Nona5').src" id="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
+    <img onmouseover="getElementByID('preview').src=getElementByID('Nona6').src" id="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
   </div>
 
 </div>
