added contact link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <br><br>
   An experimental horror film about a hitchhiker’s descent into madness, adapted from a short story by Stephen King. The film was produced through King’s dollar baby program as my thesis film at Hampshire College.
 <br><br>
-  (For a private screening, please contact me directly)
+  (For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly)
 </p>
 </center>
 
