--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <li><a href="me.html">me</a></li>
   <li><a href="reel.html">reel</a></li>
   <li><a target="_blank" href="Cowper_Resume.pdf">resume</a></li>
-  <li><a href="#commercial">commercial</a></li>
+  <li><a href="commercial.html">commercial</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
   <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
@@ -77,30 +77,6 @@
   An experimental horror film about a hitchhiker’s descent into madness, adapted from a short story by Stephen King. The film was produced through King’s dollar baby program as my thesis film at Hampshire College.
 <br><br>
   (For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly)
-</p>
-</center>
-
-<br><br>
-
-<hr color="#50A8AF">
-
-<h2>
-  Ken Burns Interview (2015)
-</h2>
-
-<hr color="#50A8AF">
-
-<br>
-
-<center>
-  <iframe width="800" height="450" src="https://www.youtube.com/embed/hZtUYXg1Vdk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-<br><br>
-<p>
-  TRT 1:13
-<br><br>
-  camera, assistant lighting
-<br><br>
-  A short interview with Ken Burns for Hampshire College.
 </p>
 </center>
 
