--- a/reel.html
+++ b/reel.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 <title>Ben Cowper | reel</title>
 <link rel="stylesheet" href="styles.css">
@@ -13,7 +12,7 @@
   <li><a href="me.html">me</a></li>
   <li><a class="active" href="reel.html">reel</a></li>
   <li><a target="_blank" href="Cowper_Resume.pdf">resume</a></li>
-  <li><a href="#commercial">commercial</a></li>
+  <li><a href="commercial.html">commercial</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
   <li><a href="mailto:cowpervideos@gmail.com">email</a></li>
