--- a/commercial.html
+++ b/commercial.html
@@ -107,7 +107,7 @@
 <br>
 
 <center>
-  <p>Image</p>
+  <img src="images/ShelbyArt.jpg" alt="Shelby Head Art Video" height="auto" width="800px">
 <br><br>
 <p>
   TRT XXXXXXX
