--- a/commercial.html
+++ b/commercial.html
@@ -154,7 +154,7 @@
 <br>
 
 <center>
-  <p>Image</p>
+  <img src="images/NHCC.jpg" alt="Northampton Chamber of Commerce" height="auto" width="800px">
 <br><br>
 <p>
   TRT XXXXXXX
@@ -226,7 +226,7 @@
 <br>
 
 <center>
-  <p>Image</p>
+  <img src="images/CambridgeU.jpg" alt="Cambridge University Press" height="auto" width="800px">
 <br><br>
 <p>
   TRT XXXXXXX
@@ -250,7 +250,7 @@
 <br>
 
 <center>
-  <p>Image</p>
+  <img src="images/SummerWind.jpg" alt="Summer Wind Animated Logo" height="auto" width="800px">
 <br><br>
 <p>
   TRT XXXXXXX
