--- a/commercial.html
+++ b/commercial.html
@@ -107,10 +107,10 @@
 <br>
 
 <center>
-  <img src="images/ShelbyArt.jpg" alt="Shelby Head Art Video" height="auto" width="800px">
+  <iframe src="https://player.vimeo.com/video/141407152?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
-  TRT XXXXXXX
+  TRT 2:19
 <br><br>
   cinematographer, editor
 <br><br>
@@ -157,8 +157,6 @@
   <img src="images/NHCC.jpg" alt="Northampton Chamber of Commerce" height="auto" width="800px">
 <br><br>
 <p>
-  TRT XXXXXXX
-<br><br>
   ​cinematographer, editor
 <br><br>
   Various promotional videos for the Northampton Chamber of Commerce.
@@ -186,6 +184,30 @@
   ​director, editor, cinematographer, concept
 <br><br>
   A short promotional video for the Frozen Film Festival.
+</p>
+</center>
+
+<br><br>
+
+<hr color="#50A8AF">
+
+<h2>
+  Summer Wind Animated Logo (2012)
+</h2>
+
+<hr color="#50A8AF">
+
+<br>
+
+<center>
+  <iframe src="https://player.vimeo.com/video/131499249?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<br><br>
+<p>
+  TRT 0:10
+<br><br>
+  animator, editor
+<br><br>
+  Animated logo for local wedding film company.
 </p>
 </center>
 
@@ -229,35 +251,11 @@
   <img src="images/CambridgeU.jpg" alt="Cambridge University Press" height="auto" width="800px">
 <br><br>
 <p>
-  TRT XXXXXXX
+  TRT 1m
 <br><br>
   ​editor
 <br><br>
   <a target="_blank" href="https://www.amazon.com/Readers-Brain-Neuroscience-Better-Writer/dp/1107496500/">Promotional video for behavioral science book.</a>
-</p>
-</center>
-
-<br><br>
-
-<hr color="#50A8AF">
-
-<h2>
-  Summer Wind Animated Logo (2012)
-</h2>
-
-<hr color="#50A8AF">
-
-<br>
-
-<center>
-  <img src="images/SummerWind.jpg" alt="Summer Wind Animated Logo" height="auto" width="800px">
-<br><br>
-<p>
-  TRT XXXXXXX
-<br><br>
-  animator, editor
-<br><br>
-  Animated logo for local wedding film company.
 </p>
 </center>
 
