--- a/reel.html
+++ b/reel.html
@@ -3,6 +3,7 @@
 <head>
 <title>Ben Cowper | reel</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="author" href="humans.txt" />
 
 <link rel="shortcut icon" href="icons/favicon.ico">
 <link rel="icon" sizes="16x16 32x32 64x64" href="icons/favicon.ico">
